Component Tree Expanded State Persistence, update assets api and manager game api, add template text editor, component tree expanded state persistence (#239)
* Component Tree Expanded State Persistence
* update assets api and manager game api
* Add template text editor

Former-commit-id: 6d582f1db2672dc4b743cb1e4d28138e2807fb40
